--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -51,13 +51,8 @@ content: |-
   ```
 
 output:
-  file: "README.md"
+  file: README.md
   mode: inject
-  template: |-
-    [//]: # (BEGIN_TF_DOCS)
-    {{ .Content }}
-
-    [//]: # (END_TF_DOCS)
 
 sort:
   enabled: true
