ci: update ci pipeline configuration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TF_VERSION: v1.3.1
+      TF_DOCS_CONFIG_FILE: .terraform-docs.yml
+      TF_DOCS_EXTRA_ARGS: --output-check
+      TF_DOCS_OUTPUT_FILE: README.md
+      TF_DOCS_WORKING_DIR: .
     steps:
       - name: Check commit message
         uses: gsactions/commit-message-checker@v1.0.1
@@ -66,7 +70,10 @@ jobs:
         uses: terraform-docs/gh-actions@v1.0.0
         id: docs
         with:
-          fail-on-diff: true
+          args: ${{ env.TF_DOCS_EXTRA_ARGS }}
+          config-file: ${{ env.TF_DOCS_CONFIG_FILE }}
+          output-file: ${{ env.TF_DOCS_OUTPUT_FILE }}
+          working-dir: ${{ env.TF_DOCS_WORKING_DIR }}
 
   release:
     runs-on: ubuntu-latest
